Feat: update, adição do botão "mais"

--- a/html/alertas.html
+++ b/html/alertas.html
@@ -27,7 +27,7 @@
         <section id="mapa">
             <h2>Mapa Interativo</h2>
         </section>
-
+        
         <section id="inundacoes">
             <h2>Inundações</h2>
             <div class="alerta">
@@ -36,8 +36,12 @@
                 <h3>Cidade</h3>
                 <p>Porto Alegre</p>
             </div>
+            <!-- Botão de três pontinhos -->
+            <button class="expandir-btn">
+                <img src="tres_pontinhos.png" alt="Expandir">
+            </button>
         </section>
-
+        
         <section id="deslizamento">
             <h2>Deslizamento</h2>
             <div class="alerta">
@@ -46,6 +50,10 @@
                 <h3>Cidade</h3>
                 <p>Caxias do Sul</p>
             </div>
+            <!-- Botão de três pontinhos -->
+            <button class="expandir-btn">
+                <img src="tres_pontinhos.png" alt="Expandir">
+            </button>
         </section>
     </main>
 
