--- a/html/Prevencoes.html
+++ b/html/Prevencoes.html
@@ -64,5 +64,19 @@
             </a>
         </section>
     </main>
+    <footer>
+        <div id="footer">
+            <section id="infos-footer">
+                <h3>Redes Sociais</h3>
+                <img src="icone_rede_social.png" alt="Redes Sociais">
+                <h3>Sobre Nós</h3>
+                <img src="icone_sobre_nos.png" alt="Sobre Nós">
+                <h3>Contato</h3>
+                <img src="icone_contato.png" alt="Contato">
+            </section>
+            <img src="bandeira_rs.png" alt="Bandeira do Rio Grande do Sul">
+            <img src="qr_code.png" alt="QR Code">
+        </div>
+    </footer>
 </body>
 </html>
