--- a/html/alertas.html
+++ b/html/alertas.html
@@ -7,25 +7,25 @@
 </head>
 <body>
     <header>
-        <p>O Rio Grande do Sul precisa da sua ajuda.</p>
+        <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <a href="index.html" class="logo">
-            <img src="logo.png" alt="Logo">
+            <img src="assets/logo.png" alt="logo">
         </a>
         <input type="text" placeholder="Pesquisar">
         <nav class="navbar">
-            <ul class="nav-links">
+            <ul>
                 <li><a href="index.html">Página Inicial</a></li>
                 <li><a href="noticias.html">Notícias</a></li>
                 <li><a href="alertas.html">Alertas</a></li>
-                <li><a href="prevencoes.html">Prevenções</a></li>
+                <li><a href="prevencoes.html">Prevencões</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>    
-
     <main>
         <section id="mapa">
             <h2>Mapa Interativo</h2>
+            <img src="assets\mapaProvisorioIlustrativo.png" alt="mapa-provisorio-meramente-ilustrativo">
         </section>
         
         <section id="inundacoes">
@@ -35,11 +35,10 @@
                 <p>Alta</p>
                 <h3>Cidade</h3>
                 <p>Porto Alegre</p>
+                <button class="expandir-btn">
+                    <img src="assets\expandirTresPontos.png" alt="Expandir">
+                </button>
             </div>
-            <!-- Botão de três pontinhos -->
-            <button class="expandir-btn">
-                <img src="tres_pontinhos.png" alt="Expandir">
-            </button>
         </section>
         
         <section id="deslizamento">
@@ -49,26 +48,24 @@
                 <p>Média</p>
                 <h3>Cidade</h3>
                 <p>Caxias do Sul</p>
+                <button class="expandir-btn">
+                    <img src="assets\expandirTresPontos.png" alt="Expandir">
+                </button>
             </div>
-            <!-- Botão de três pontinhos -->
-            <button class="expandir-btn">
-                <img src="tres_pontinhos.png" alt="Expandir">
-            </button>
         </section>
     </main>
-
     <footer>
         <div id="footer">
             <section id="infos-footer">
                 <h3>Redes Sociais</h3>
-                <img src="icone_rede_social.png" alt="Redes Sociais">
+                <img src="assets\redeSocial.png" alt="Redes Sociais">
                 <h3>Sobre Nós</h3>
-                <img src="icone_sobre_nos.png" alt="Sobre Nós">
+                <img src="assets\sobreNos.png" alt="Sobre Nós">
                 <h3>Contato</h3>
-                <img src="icone_contato.png" alt="Contato">
+                <img src="assets\contato.png" alt="Contato">
             </section>
-            <img src="bandeira_rs.png" alt="Bandeira do Rio Grande do Sul">
-            <img src="qr_code.png" alt="QR Code">
+            <img src="assets\bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
+            <img src="assets\qrCode.png" alt="QR Code">
         </div>
     </footer>
 </body>
