Feat: Update Correção de referenciamento das imagens

--- a/html/Prevencoes.html
+++ b/html/Prevencoes.html
@@ -9,7 +9,7 @@
     <header>
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <a href="index.html" class="logo">
-            <img src="assets/logo.png" alt="logo">
+            <img src="/assets/logo.png" alt="logo">
         </a>
         <input type="text" placeholder="Pesquisar">
         <nav class="navbar">
@@ -21,12 +21,12 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
-    </header>
+    </header>  
 
     <main>
         <section>
             <h1>Dicas de Prevenção</h1>
-            <img src="assets\prev.jpg" alt="prev">
+            <img src="/assets/prev.jpg" alt="prev">
             <h3>Quais medidas poderiam ter sido tomadas para evitar tragédia no RS?</h3>
             <a href="https://www.otempo.com.br/brasil/2024/5/7/quais-medidas-poderiam-ser-tomadas-para-evitar-tragedia-no-rs-">
                 <button>Ler mais</button>
@@ -68,14 +68,14 @@
         <div id="footer">
             <section id="infos-footer">
                 <h3>Redes Sociais</h3>
-                <img src="assets\redeSocial.png" alt="Redes Sociais">
+                <img src="/assets/redeSocial.png" alt="Redes Sociais">
                 <h3>Sobre Nós</h3>
-                <img src="assets\sobreNos.png" alt="Sobre Nós">
+                <img src="/assets/sobreNos.png" alt="Sobre Nós">
                 <h3>Contato</h3>
-                <img src="assets\contato.png" alt="Contato">
+                <img src="/assets/contato.png" alt="Contato">
             </section>
-            <img src="assets\bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
-            <img src="assets\qrCode.png" alt="QR Code">
+            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
+            <img src="/assets/qrCode.png" alt="QR Code">
         </div>
     </footer>
 </body>
