--- a/html/alertas.html
+++ b/html/alertas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <header>
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <a href="index.html" class="logo">
-            <img src="assets/logo.png" alt="logo">
+            <img src="/assets/logo.png" alt="logo">
         </a>
         <input type="text" placeholder="Pesquisar">
         <nav class="navbar">
@@ -25,7 +25,7 @@
     <main>
         <section id="mapa">
             <h2>Mapa Interativo</h2>
-            <img src="assets\mapaProvisorioIlustrativo.png" alt="mapa-provisorio-meramente-ilustrativo">
+            <img src="/assets/mapaProvisorioIlustrativo.png" alt="mapa-provisorio-meramente-ilustrativo">
         </section>
         
         <section id="inundacoes">
@@ -36,7 +36,7 @@
                 <h3>Cidade</h3>
                 <p>Porto Alegre</p>
                 <button class="expandir-btn">
-                    <img src="assets\expandirTresPontos.png" alt="Expandir">
+                    <img src="/assets/expandirTresPontos.png" alt="Expandir">
                 </button>
             </div>
         </section>
@@ -49,7 +49,7 @@
                 <h3>Cidade</h3>
                 <p>Caxias do Sul</p>
                 <button class="expandir-btn">
-                    <img src="assets\expandirTresPontos.png" alt="Expandir">
+                    <img src="/assets/expandirTresPontos.png" alt="Expandir">
                 </button>
             </div>
         </section>
@@ -58,14 +58,14 @@
         <div id="footer">
             <section id="infos-footer">
                 <h3>Redes Sociais</h3>
-                <img src="assets\redeSocial.png" alt="Redes Sociais">
+                <img src="/assets/redeSocial.png" alt="Redes Sociais">
                 <h3>Sobre Nós</h3>
-                <img src="assets\sobreNos.png" alt="Sobre Nós">
+                <img src="/assets/sobreNos.png" alt="Sobre Nós">
                 <h3>Contato</h3>
-                <img src="assets\contato.png" alt="Contato">
+                <img src="/assets/contato.png" alt="Contato">
             </section>
-            <img src="assets\bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
-            <img src="assets\qrCode.png" alt="QR Code">
+            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
+            <img src="/assets/qrCode.png" alt="QR Code">
         </div>
     </footer>
 </body>
