Feat: Update atualizando e colocando recursos faltantes

--- a/html/alertas.html
+++ b/html/alertas.html
@@ -11,7 +11,10 @@
         <a href="index.html" class="logo">
             <img src="/assets/logo.png" alt="logo">
         </a>
-        <input type="text" placeholder="Pesquisar">
+        <section>
+            <img src="/assets/lupa.png" alt="lupaDePesquisa">
+            <input type="text" placeholder="Pesquisar" alt="lupaDePesquisa">
+        </section>
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
@@ -21,7 +24,7 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
-    </header>    
+    </header>     
     <main>
         <section id="mapa">
             <h2>Mapa Interativo</h2>
