--- a/html/Prevencoes.html
+++ b/html/Prevencoes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,10 @@
         <a href="index.html" class="logo">
             <img src="/assets/logo.png" alt="logo">
         </a>
-        <input type="text" placeholder="Pesquisar">
+        <section>
+            <img src="/assets/lupa.png" alt="lupaDePesquisa">
+            <input type="text" placeholder="Pesquisar" alt="lupaDePesquisa">
+        </section>
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
