--- a/html/Prevencoes.html
+++ b/html/Prevencoes.html
@@ -69,14 +69,18 @@
     </main>
     <footer>
         <div id="footer">
-            <section id="infos-footer">
+            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
                 <h3>Redes Sociais</h3>
                 <img src="/assets/redeSocial.png" alt="Redes Sociais">
+            </a>
+            <a href="/html/sobre.html">
                 <h3>Sobre Nós</h3>
                 <img src="/assets/sobreNos.png" alt="Sobre Nós">
+            </a>
+            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
                 <h3>Contato</h3>
                 <img src="/assets/contato.png" alt="Contato">
-            </section>
+            </a>
             <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
             <img src="/assets/qrCode.png" alt="QR Code">
         </div>
