Feat: Update correção de bugs e erros

--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -6,7 +6,7 @@
     <title>Sobre Nós</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <a href="index.html" class="logo">
             <img src="/assets/logo.png" alt="logo">
@@ -72,7 +72,7 @@
         </div>
     </main>    
     <footer>
-        <div id="footer">
+        <div class="footer">
             <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
                 <h3>Redes Sociais</h3>
                 <img src="/assets/redeSocial.png" alt="Redes Sociais">
