feat: update corrigindo erros apontados

--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -29,21 +29,23 @@
         <h1>Contate-nos</h1>
         <p>Entre em contato conosco preenchendo o formulário abaixo. Estamos aqui para responder suas dúvidas, receber sugestões ou oferecer suporte.</p>
         <img src="/assets/imagemContato.png" alt="Juntos pelo futuro" id="imagemContato">
-        <form action="enviar.php" method="post">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required placeholder="Nome">
-            <br>
-            <label for="sobrenome">Sobrenome:</label>
-            <input type="text" id="sobrenome" name="sobrenome" required placeholder="Sobrenome">
-            <br>
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required placeholder="email@gmail.com">
-            <br>
-            <label for="mensagem">Sua mensagem:</label>
-            <textarea id="mensagem" name="mensagem" rows="4" required placeholder="Mensagens, dúvidas ou sugestões para a equipe do portal."></textarea>
-            <br>
-            <button type="submit">Enviar</button>
-        </form>
+        <section>
+            <form action="enviar.php" method="post">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required placeholder="Nome">
+                <br>
+                <label for="sobrenome">Sobrenome:</label>
+                <input type="text" id="sobrenome" name="sobrenome" required placeholder="Sobrenome">
+                <br>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required placeholder="email@gmail.com">
+                <br>
+                <label for="mensagem">Sua mensagem:</label>
+                <textarea id="mensagem" name="mensagem" rows="4" required placeholder="Mensagens, dúvidas ou sugestões para a equipe do portal."></textarea>
+                <br>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
     </main>
     <p>Sobre Nós | Copyright © 2024</p>
     <footer>
