Feat: Create adição da pasta onde css vai aficar

--- a/src/html/alertas.html
+++ b/src/html/alertas.html
@@ -4,31 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alertas</title>
+    <link rel="stylesheet" href="/src/css/alertas.css">
 </head>
 <body>
-    <header class="header">
+    <header>
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
-        <a href="index.html" class="logo">
-            <img src="/assets/logo.png" alt="logo">
-        </a>
-        <section>
-            <img src="/assets/lupa.png" alt="lupa De Pesquisa">
-            <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
-        </section>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Página Inicial</a></li>
-                <li><a href="noticias.html">Notícias</a></li>
-                <li><a href="alertas.html">Alertas</a></li>
-                <li><a href="prevencoes.html">Prevencões</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </header>     
+        <div class="header-top">
+            <a href="index.html" class="logo">
+                <img src="/assets/logo.png" alt="logo">
+            </a>
+            <section id="barra-de-pesquisa">
+                <img src="/assets/lupa.png" alt="lupa De Pesquisa">
+                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
+            </section>
+        </div>
+        <div class="navbar-container">
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Página Inicial</a></li>
+                    <li><a href="noticias.html">Notícias</a></li>
+                    <li><a href="alertas.html">Alertas</a></li>
+                    <li><a href="prevencoes.html">Prevencões</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>    
     <main>
         <section id="mapa">
             <h2>Mapa Interativo</h2>
-            <img src="/assets/mapaProvisorioIlustrativo.png" alt="mapa-provisorio-meramente-ilustrativo">
+            <img src="/assets/mapaProvisorioIlustrativo.png" alt="mapa-provisorio-meramente-ilustrativo" height="60px" width="60px">
         </section>
         
         <section id="inundacoes">
