feat: update corrigindo erros

--- a/src/html/alertas.html
+++ b/src/html/alertas.html
@@ -33,7 +33,7 @@
     <main>
         <section id="mapa">
             <h2>Mapa Interativo</h2>
-            <img src="/assets/mapaProvisorioIlustrativo.png" alt="mapa-provisorio-meramente-ilustrativo" height="60px" width="60px">
+            <img src="/assets/mapaProvisorioIlustrativo.png" alt="mapa-provisorio-meramente-ilustrativo">
         </section>
         
         <section id="inundacoes">
