feat: update começo do css da página alertas

--- a/src/html/alertas.html
+++ b/src/html/alertas.html
@@ -33,10 +33,11 @@
     <main>
         <section id="mapa">
             <h2>Mapa Interativo</h2>
-            <img src="/assets/mapaProvisorioIlustrativo.png" alt="mapa-provisorio-meramente-ilustrativo">
-        </section>
-        
-        <section id="inundacoes">
+            <div id="map">
+                <img src="/assets/mapaProvisorioIlustrativo.png" alt="mapa provisorio">
+            </div>
+            </section>
+        <section class="cards-main">
             <h2>Inundações</h2>
             <div class="alerta">
                 <h3>Gravidade</h3>
@@ -48,8 +49,7 @@
                 </button>
             </div>
         </section>
-        
-        <section id="deslizamento">
+        <section class="cards-main">
             <h2>Deslizamento</h2>
             <div class="alerta">
                 <h3>Gravidade</h3>
