--- a/src/html/prevencoes.html
+++ b/src/html/prevencoes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prevenções</title>
+    <link rel="stylesheet" href="prevencoes.css">
 </head>
 <body>
     <header class="header">
@@ -27,7 +28,7 @@
     </header>  
 
     <main>
-        <section>
+        <section class="prevencao-tipos">
             <h1>Dicas de Prevenção</h1>
             <img src="/assets/prev.jpg" alt="prev">
             <h3>Quais medidas poderiam ter sido tomadas para evitar tragédia no RS?</h3>
@@ -35,7 +36,7 @@
                 <button>Ler mais</button>
             </a>    
         </section>
-        <section>
+        <section class="recomendacoes-seguranca">
             <h2>Recomendações de segurança</h2>
             <h3><b>Saiba o que fazer em caso de chuva e alagamentos</b></h3>
             <p>Em situações de chuvas intensas e risco de alagamento, é fundamental que moradores de zonas suscetíveis a cheias adotem medidas preventivas
