Ajustado arquivo prevencoes.css
Ajustado arquivo prevencoes.css

--- a/src/html/prevencoes.html
+++ b/src/html/prevencoes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prevenções</title>
-    <link rel="stylesheet" href="prevencoes.css">
+    <link rel="stylesheet" href="/src/css/prevencoes.css">
 </head>
 <body>
     <header class="header">
@@ -16,15 +16,17 @@
             <img src="/assets/lupa.png" alt="lupaDePesquisa">
             <input type="text" placeholder="Pesquisar" alt="lupaDePesquisa">
         </section>
-        <nav class="navbar">
-            <ul>
+         <div class="navbar-conteiner">
+          <nav class="navbar">
+             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
                 <li><a href="noticias.html">Notícias</a></li>
                 <li><a href="alertas.html">Alertas</a></li>
                 <li><a href="prevencoes.html">Prevencões</a></li>
                 <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
+             </ul>
+          </nav>
+         </div>
     </header>  
 
     <main>
@@ -70,20 +72,20 @@
     </main>
     <footer>
         <div class="footer">
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8" class="footer-item">
                 <h3>Redes Sociais</h3>
                 <img src="/assets/redeSocial.png" alt="Redes Sociais">
             </a>
-            <a href="/html/sobre.html">
+            <a href="/html/sobre.html" class="footer-item">
                 <h3>Sobre Nós</h3>
                 <img src="/assets/sobreNos.png" alt="Sobre Nós">
             </a>
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8" class="footer-item">
                 <h3>Contato</h3>
-                <img src="/assets/contato.png" alt="Contato">
+                <img src="/assets/contato.png" alt="Contato" class="footer-item">
             </a>
-            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
-            <img src="/assets/qrCode.png" alt="QR Code">
+            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" class="footer-item">
+            <img src="/assets/qrCode.png" alt="QR Code" class="footer-item">
         </div>
     </footer>
 </body>
