--- a/src/html/alertas.html
+++ b/src/html/alertas.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alertas</title>
     <link rel="stylesheet" href="/src/css/alertas.css">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script type="module" src="/src/js/alertas.js"></script>
+    <script src="/src/js/config.js"></script>
 </head>
 <body>
     <header>
@@ -29,56 +32,113 @@
                 </ul>
             </nav>
         </div>
-    </header>    
+    </header>
     <main>
+        <span id="span-principal">Mapa de Alertas</span>
         <section id="mapa">
-            <h2>Mapa Interativo</h2>
             <div id="map">
-                <img src="/assets/mapaProvisorioIlustrativo.png" alt="mapa provisorio">
-            </div>
-            </section>
-        <section class="cards-main">
-            <h2>Inundações</h2>
-            <div class="alerta">
-                <h3>Gravidade</h3>
-                <p>Alta</p>
-                <h3>Cidade</h3>
-                <p>Porto Alegre</p>
-                <button class="expandir-btn">
-                    <img src="/assets/expandirTresPontos.png" alt="Expandir">
-                </button>
+                <script>
+                    (g => {
+                        var h, a, k, p = "The Google Maps JavaScript API",
+                            c = "google",
+                            l = "importLibrary",
+                            q = "__ib__",
+                            m = document,
+                            b = window;
+                        b = b[c] || (b[c] = {});
+                        var d = b.maps || (b.maps = {}),
+                            r = new Set,
+                            e = new URLSearchParams,
+                            u = () => h || (h = new Promise(async (f, n) => {
+                                await (a = m.createElement("script"));
+                                e.set("libraries", [...r] + "");
+                                for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]);
+                                e.set("callback", c + ".maps." + q);
+                                a.src = `https://maps.${c}apis.com/maps/api/js?` + e;
+                                d[q] = f;
+                                a.onerror = () => h = n(Error(p + " could not load."));
+                                a.nonce = m.querySelector("script[nonce]")?.nonce || "";
+                                m.head.append(a)
+                            }));
+                        d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n))
+                    })({
+                        key: "AIzaSyAhPa9XgkRujNdi6vBzyyGU0LLdWEtBMIQ",
+                        v: "weekly"
+                    });
+                </script>
             </div>
         </section>
-        <section class="cards-main">
-            <h2>Deslizamento</h2>
-            <div class="alerta">
-                <h3>Gravidade</h3>
-                <p>Média</p>
-                <h3>Cidade</h3>
-                <p>Caxias do Sul</p>
-                <button class="expandir-btn">
-                    <img src="/assets/expandirTresPontos.png" alt="Expandir">
-                </button>
-            </div>
+        <section id="cards">
+            <span class="pedaco">Enchente</span>
+                <div class="element-principal">
+                    <h3>Gravidade</h3>
+                    <h3>Cidade</h3>
+                </div>
+                <div class="element-secundario">
+                    <div class="gravidades">
+                        <p class="gravidade-alta">Alta</p>
+                        <p class="gravidade-baixa">Baixa</p>
+                        <p class="gravidade-media">Média</p>
+                    </div>
+                    <div class="cidade">
+                        <p>Taquari</p>
+                        <p>Lajeado</p>
+                        <p>Butía</p>
+                    </div>
+                </div>
+            <button class="expandir-btn">...</button>
+            <span class="pedaco">Deslizamento</span>
+                <div class="element-principal">
+                    <h3>Gravidade</h3>
+                    <h3>Cidade</h3>
+                </div>
+                <div class="element-secundario">
+                    <div class="gravidades">
+                        <p class="gravidade-alta">Alta</p>
+                        <p class="gravidade-baixa">Baixa</p>
+                        <p class="gravidade-media">Média</p>
+                    </div>
+                    <div class="cidade">
+                        <p>Teutônia</p>
+                        <p>Pantano Grande</p>
+                        <p>Rio Pardo</p>
+                    </div>
+                </div>
+            <button class="expandir-btn">...</button>
         </section>
     </main>
     <footer>
         <div class="footer">
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                <h3>Redes Sociais</h3>
-                <img src="/assets/redeSocial.png" alt="Redes Sociais">
-            </a>
-            <a href="/html/sobre.html">
-                <h3>Sobre Nós</h3>
-                <img src="/assets/sobreNos.png" alt="Sobre Nós">
-            </a>
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                <h3>Contato</h3>
-                <img src="/assets/contato.png" alt="Contato">
-            </a>
-            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
-            <img src="/assets/qrCode.png" alt="QR Code">
+            <section id="footerfeio">
+                <div class="elementsfooter">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/redeSocial.png" alt="Redes Sociais">
+                        <h3>Redes Sociais</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="/html/sobre.html">
+                        <img src="/assets/sobreNos.png" alt="Sobre Nós">
+                        <h3>Sobre Nós</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/contato.png" alt="Contato">
+                        <h3>Contato</h3>
+                    </a>
+                </div>
+            </section>
+            <div class="middle-section">
+                <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                <p>Copyright ©2024 Portal Do Clima RS</p>
+            </div>
+            <div class="qrcode-section">
+                <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
+            </div>
         </div>
-    </footer>
+        <div class="diagonal-line left"></div>
+        <div class="diagonal-line right"></div>
+    </footer>            
 </body>
 </html>
