detalhes do css do sobre e padronização

--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -87,21 +87,36 @@
     </main>    
     <footer>
         <div class="footer">
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                <h3>Redes Sociais</h3>
-                <img src="/assets/redeSocial.png" alt="Redes Sociais">
-            </a>
-            <a href="sobre.html">
-                <h3>Sobre Nós</h3>
-                <img src="/assets/sobreNos.png" alt="Sobre Nós">
-            </a>
-            <a href="contato.html">
-                <h3>Contato</h3>
-                <img src="/assets/contato.png" alt="Contato">
-            </a>
-            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
-            <img src="/assets/qrCode.png" alt="QR Code">
+            <section id="footer-setor">
+                <div class="elementsfooter">
+                    <a href="">
+                        <img src="/assets/redeSocial.png" alt="Redes Sociais">
+                        <h3>Redes Sociais</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="sobre.html">
+                        <img src="/assets/sobreNos.png" alt="Sobre Nós">
+                        <h3>Sobre Nós</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="contato.html">
+                        <img src="/assets/contato.png" alt="Contato">
+                        <h3>Contato</h3>
+                    </a>
+                </div>
+            </section>
+            <div class="middle-section">
+                <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                <p>Copyright ©2024 Portal Do Clima RS</p>
+            </div>
+            <div class="qrcode-section">
+                <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
+            </div>
         </div>
-    </footer>
+        <div class="diagonal-line left"></div>
+        <div class="diagonal-line right"></div>
+    </footer>           
 </body>
 </html>
