feat: update correção de ancoragem

--- a/src/html/alertas.html
+++ b/src/html/alertas.html
@@ -89,7 +89,7 @@
                     </a>
                 </div>
                 <div class="elementsfooter">
-                    <a href="/html/sobre.html">
+                    <a href="./sobre.html">
                         <img src="/assets/sobreNos.png" alt="Sobre Nós">
                         <h3>Sobre Nós</h3>
                     </a>
