--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -4,33 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="../css/contato.css">
 </head>
 <body>
-    <header class="header">
+    <header>
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
-        <a href="index.html" class="logo">
-            <img src="/assets/logo.png" alt="logo">
-        </a>
-        <section>
-            <img src="/assets/lupa.png" alt="lupa De Pesquisa">
-            <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
-        </section>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Página Inicial</a></li>
-                <li><a href="noticias.html">Notícias</a></li>
-                <li><a href="alertas.html">Alertas</a></li>
-                <li><a href="prevencoes.html">Prevencões</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </header>  
+        <div class="header-top">
+            <a href="index.html" class="logo">
+                <img src="/assets/logo.png" alt="logo">
+            </a>
+            <section id="barra-de-pesquisa">
+                <img src="/assets/lupa.png" alt="lupa De Pesquisa">
+                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
+            </section>
+        </div>
+        <div class="navbar-container">
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Página Inicial</a></li>
+                    <li><a href="noticias.html">Notícias</a></li>
+                    <li><a href="alertas.html">Alertas</a></li>
+                    <li><a href="prevencoes.html">Prevencões</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header> 
     <main>
-        <h1>Contate-nos</h1>
-        <p>Entre em contato conosco preenchendo o formulário abaixo. Estamos aqui para responder suas dúvidas, receber sugestões ou oferecer suporte.</p>
-        <img src="/assets/imagemContato.png" alt="Juntos pelo futuro" id="imagemContato">
-        <section>
-            <form action="enviar.php" method="post">
+        <div id="side-text">
+            <h1>Contate-nos</h1>
+            <p id="mensagem-forms">Entre em contato conosco preenchendo o formulário abaixo. Estamos aqui para responder suas dúvidas, receber sugestões ou oferecer suporte.</p>
+        </div>
+        <section id="elemento-bom">
+            <form action="enviar.php" method="post" id="formulario">
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required placeholder="Nome">
                 <br>
@@ -45,26 +51,41 @@
                 <br>
                 <button type="submit">Enviar</button>
             </form>
+            <img src="/assets/imagemContato.png" alt="Juntos pelo futuro" id="imagemContato">
         </section>
     </main>
-    <p>Sobre Nós | Copyright © 2024</p>
     <footer>
         <div class="footer">
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                <h3>Redes Sociais</h3>
-                <img src="/assets/redeSocial.png" alt="Redes Sociais">
-            </a>
-            <a href="/html/sobre.html">
-                <h3>Sobre Nós</h3>
-                <img src="/assets/sobreNos.png" alt="Sobre Nós">
-            </a>
-            <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                <h3>Contato</h3>
-                <img src="/assets/contato.png" alt="Contato">
-            </a>
-            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul">
-            <img src="/assets/qrCode.png" alt="QR Code">
+            <section id="footerfeio">
+                <div class="elementsfooter">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/redeSocial.png" alt="Redes Sociais">
+                        <h3>Redes Sociais</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="./sobre.html">
+                        <img src="/assets/sobreNos.png" alt="Sobre Nós">
+                        <h3>Sobre Nós</h3>
+                    </a>
+                </div>
+                <div class="elementsfooter">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/contato.png" alt="Contato">
+                        <h3>Contato</h3>
+                    </a>
+                </div>
+            </section>
+            <div class="middle-section">
+                <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                <p>Copyright ©2024 Portal Do Clima RS</p>
+            </div>
+            <div class="qrcode-section">
+                <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
+            </div>
         </div>
+        <div class="diagonal-line left"></div>
+        <div class="diagonal-line right"></div>
     </footer>
 </body>
 </html>
