--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,34 +7,33 @@
     <title>Página Inicial</title>
 </head>
 <body>
-  <header>
-    <div class="conteudo"></div>
-    <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>  
-    <div class="header-top">
-        <a href="index.html" class="logo">
-            <img src="https://github.com/shirleipeixoto/PortalClimaRS/blob/main/assets/logo.png?raw=true" alt="logo">
-        </a>
-        <section id="barra-de-pesquisa">
-            <img src="https://github.com/shirleipeixoto/PortalClimaRS/blob/main/assets/lupa.png?raw=true" alt="lupa De Pesquisa">
-            <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
-        </section>
-    </div>
-    <div class="navbar-container">
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Página Inicial</a></li>
-                <li><a href="noticias.html">Notícias</a></li>
-                <li><a href="alertas.html">Alertas</a></li>
-                <li><a href="prevencoes.html">Prevencões</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>    
+    <header>
+        <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
+        <div class="header-top">
+            <a href="index.html" class="logo">
+                <img src="/assets/logo.png" alt="logo">
+            </a>
+            <section id="barra-de-pesquisa">
+                <img src="/assets/lupa.png" alt="lupa De Pesquisa">
+                <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
+            </section>
+        </div>
+        <div class="navbar-container">
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Página Inicial</a></li>
+                    <li><a href="noticias.html">Notícias</a></li>
+                    <li><a href="alertas.html">Alertas</a></li>
+                    <li><a href="prevencoes.html">Prevencões</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>    
 <main>
     <h1 class="titulo">PORTAL CLIMARS</h1>
     <divimagem>
-        <img class="imgalagada" src="css/Screenshot_2.png" alt="Casas inundadas no Rio Grande do Sul">
+        <img class="imgalagada" src="../../assets/riograndealagado.png" alt="Casas inundadas no Rio Grande do Sul">
     </div imagem>
     <div class="texto1">
         <h1>Como você pode ajudar?</h1>
@@ -114,25 +113,38 @@
     </div>
     </section>
 </aside>
-    <footer>
-        <footer>
-            <div class="footer">
-                <div class="left-column">
-                  <a href="#" class="social-link">
-                    <img src="https://raw.githubusercontent.com/shirleipeixoto/PortalClimaRS/main/assets/redeSocial.png" alt="Redes Sociais">Redes Sociais</a>
-                  <a href="#" class="social-link">
-                    <img src="https://raw.githubusercontent.com/shirleipeixoto/PortalClimaRS/main/assets/sobreNos.png">Sobre Nós</a>
-                  <a href="#" class="social-link">
-                    <img src="https://raw.githubusercontent.com/shirleipeixoto/PortalClimaRS/main/assets/contato.png" href="#">Contato</a>
-                </div>
-                <div class="bandeiracentro">
-                  <img src="https://github.com/shirleipeixoto/PortalClimaRS/blob/main/assets/bandeiraRioGrande.png?raw=true" alt="Bandeira do Rio Grande do Sul">
-                  <p class="Copyright">Copyright ©2024 <br> Portal Do Clima RS</p>
-                </div>
-                <div class="right-column">
-                  <img src="https://raw.githubusercontent.com/shirleipeixoto/PortalClimaRS/main/assets/qrCode.png" alt="QR Code">
-                </div>
-              </div>
-    </footer>
+<footer>
+    <div class="footer">
+        <section id="footerfeio">
+            <div class="elementsfooter">
+                <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                    <img src="/assets/redeSocial.png" alt="Redes Sociais">
+                    <h3>Redes Sociais</h3>
+                </a>
+            </div>
+            <div class="elementsfooter">
+                <a href="./sobre.html">
+                    <img src="/assets/sobreNos.png" alt="Sobre Nós">
+                    <h3>Sobre Nós</h3>
+                </a>
+            </div>
+            <div class="elementsfooter">
+                <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                    <img src="/assets/contato.png" alt="Contato">
+                    <h3>Contato</h3>
+                </a>
+            </div>
+        </section>
+        <div class="middle-section">
+            <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+            <p>Copyright ©2024 Portal Do Clima RS</p>
+        </div>
+        <div class="qrcode-section">
+            <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
+        </div>
+    </div>
+    <div class="diagonal-line left"></div>
+    <div class="diagonal-line right"></div>
+</footer> 
 </body>
 </html>
