--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <div class="header-top">
             <a href="index.html" class="logo">
-                <img src="/assets/logo.png" alt="logo">
+                <img src="/assets/img.alagada.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
                 <img src="/assets/lupa.png" alt="lupa De Pesquisa">
