feat: UPDATE correção de hierarquização do repositorio

--- a/src/html/noticias.html
+++ b/src/html/noticias.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notícias</title>
-    <link rel="stylesheet" href="/src/css/noticias.css">
+    <link rel="stylesheet" href="../../assets/css/noticias.css">
 </head>
 <body>
     <header>
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <div class="header-top">
             <a href="index.html" class="logo">
-                <img src="/assets/logo.png" alt="logo">
+                <img src="/assets/img/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="/assets/lupa.png" alt="lupa De Pesquisa">
+                <img src="/assets/img/lupa.png" alt="lupa De Pesquisa">
                 <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
             </section>
         </div>
@@ -42,7 +42,7 @@
                 <h3>Últimas Notícias Rio Grande do Sul</h3>
                 <div class="noticias">
                     <div class="ListaNoticias">
-                        <img src="/assets/Img1.png" alt="Streamer Gaules">
+                        <img src="/assets/img/Img1.png" alt="Streamer Gaules">
                         <div>
                             <p id="data"> Rio Grande do Sul, Brasil, 23/05/2024 </p>
                             <p id="subtitulo"> Streamer brasileiro arrecada doações </p>
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="ListaNoticias">
-                        <img src="/assets/img2.png" alt="Equipes de resgate ajudando">
+                        <img src="/assets/img/img2.png" alt="Equipes de resgate ajudando">
                         <div>
                             <p id="data"> Rio Grande do Sul, Brasil, 28/05/2024 </p>
                             <p id="subtitulo"> Doações e ajuda chegam de todo o canto do Brasil </p>
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="ListaNoticias">
-                        <img src="/assets/img3.png" alt="Casa inundadas">
+                        <img src="/assets/img/img3.png" alt="Casa inundadas">
                         <div>
                             <p id="data"> Rio Grande do Sul, Brasil, 28/05/2024 </p>
                             <p id="subtitulo"> Cidades debaixo d'água </p>
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class ="ListaNoticias">
-                        <img src="/assets/img4.png" alt="Bandeira do Brasil dividida com a do Rio Grande do Sul">
+                        <img src="/assets/img/img4.png" alt="Bandeira do Brasil dividida com a do Rio Grande do Sul">
                         <div>
                             <p id="data"> Rio Grande do Sul, Brasil, 27/05/2024 </p>
                             <p id="subtitulo"> Estado de Calamidade no Rio Grande do Sul </p>
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class ="ListaNoticias">
-                        <img src="/assets/img5.png" alt="Civis voluntarios ajudando o Rio Grande Do Sul">
+                        <img src="/assets/img/img5.png" alt="Civis voluntarios ajudando o Rio Grande Do Sul">
                         <div>
                             <p id="data"> Rio Grande do Sul, Brasil, 19/05/2024 </p>
                             <p id="subtitulo"> Voluntários se juntam na limpeza das cidades </p>
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                     <div class="ListaNoticias">
-                        <img src="/assets/img6.png" alt="Homem em pequeno barco">
+                        <img src="/assets/img/img6.png" alt="Homem em pequeno barco">
                         <div>
                             <p id="data"> Rio Grande do Sul, Brasil, 19/05/2024 </p>
                             <p id="subtitulo"> Moradores perdem suas casas </p>
@@ -103,52 +103,52 @@
             <aside>
                 <section id="barraLateral">
                     <div id="AjudeRG">
-                        <img src="/assets/doac1.png" alt="Doações Rio Grande do Sul">
+                        <img src="/assets/img/doac1.png" alt="Doações Rio Grande do Sul">
                         <p><a href="https://www.poder360.com.br/brasil/governo-do-rs-reativa-pix-para-doacoes-apos-chuvas-saiba-como-ajudar/">Faça sua parte. Ajude o Rio Grande do Sul</a></p>
                     </div>
                     <div id="AjudeRG">
-                        <img src="/assets/doac2.png" alt="Pontos de Coleta">
+                        <img src="/assets/img/doac2.png" alt="Pontos de Coleta">
                         <p><a href="https://www.fm105.com.br/acao-solidaria-ganha-mais-pontos-de-coleta-em-jaragua-do-sul/">Conheça os principais locais de coleta</a></p>
                     </div>
                     <div id="AjudeRG">
-                        <img src="/assets/doac3.png" alt="Local para voluntariar-se a ajudar">
+                        <img src="/assets/img/doac3.png" alt="Local para voluntariar-se a ajudar">
                         <p><a href="https://ongzoe.org/telemedicina-para-o-rs/?gad_source=1&gclid=CjwKCAjwmYCzBhA6EiwAxFwfgAS8BjGsvpiNUwj7Fg4VARG0iT8_6nQgueJUryHHZhDUKyEtVKuWDxoCYEIQAvD_BwE">Seja um voluntário e leve ajude ao RS</a></p>
                     </div>
                 </section>
             </aside>
         </main>
-    <footer>
-        <div class="footer">
-            <section id="footerfeio">
-                <div class="elementsfooter">
-                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="/assets/redeSocial.png" alt="Redes Sociais">
-                        <h3>Redes Sociais</h3>
-                    </a>
+        <footer>
+            <div class="footer">
+                <section id="footerfeio">
+                    <div class="elementsfooter">
+                        <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                            <img src="/assets/img/redeSocial.png" alt="Redes Sociais">
+                            <h3>Redes Sociais</h3>
+                        </a>
+                    </div>
+                    <div class="elementsfooter">
+                        <a href="./sobre.html">
+                            <img src="/assets/img/sobreNos.png" alt="Sobre Nós">
+                            <h3>Sobre Nós</h3>
+                        </a>
+                    </div>
+                    <div class="elementsfooter">
+                        <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                            <img src="/assets/img/contato.png" alt="Contato">
+                            <h3>Contato</h3>
+                        </a>
+                    </div>
+                </section>
+                <div class="middle-section">
+                    <img src="/assets/img/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                    <p>Copyright ©2024 Portal Do Clima RS</p>
                 </div>
-                <div class="elementsfooter">
-                    <a href="./sobre.html">
-                        <img src="/assets/sobreNos.png" alt="Sobre Nós">
-                        <h3>Sobre Nós</h3>
-                    </a>
+                <div class="qrcode-section">
+                    <img src="/assets/img/qrCode.png" alt="QR Code" id="qrcode">
                 </div>
-                <div class="elementsfooter">
-                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="/assets/contato.png" alt="Contato">
-                        <h3>Contato</h3>
-                    </a>
-                </div>
-            </section>
-            <div class="middle-section">
-                <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
-                <p>Copyright ©2024 Portal Do Clima RS</p>
             </div>
-            <div class="qrcode-section">
-                <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
-            </div>
-        </div>
-        <div class="diagonal-line left"></div>
-        <div class="diagonal-line right"></div>
-    </footer>
+            <div class="diagonal-line left"></div>
+            <div class="diagonal-line right"></div>
+        </footer> 
 </body>
 </html>
