--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/paginainicial.css">          
+    <link rel="stylesheet" href="../../assets/css/paginainicial.css">          
     <title>Página Inicial</title> 
 </head>
 <body>
@@ -11,10 +11,10 @@
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <div class="header-top">
             <a href="index.html" class="logo">
-                <img src="/assets/logo.png" alt="logo">
+                <img src="/assets/img/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="/assets/lupa.png" alt="lupa De Pesquisa">
+                <img src="/assets/img/lupa.png" alt="lupa De Pesquisa">
                 <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
             </section>
         </div>
@@ -75,29 +75,29 @@
             <section id="footerfeio">
                 <div class="elementsfooter">
                     <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="/assets/redeSocial.png" alt="Redes Sociais">
+                        <img src="/assets/img/redeSocial.png" alt="Redes Sociais">
                         <h3>Redes Sociais</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
                     <a href="./sobre.html">
-                        <img src="/assets/sobreNos.png" alt="Sobre Nós">
+                        <img src="/assets/img/sobreNos.png" alt="Sobre Nós">
                         <h3>Sobre Nós</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
                     <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
-                        <img src="/assets/contato.png" alt="Contato">
+                        <img src="/assets/img/contato.png" alt="Contato">
                         <h3>Contato</h3>
                     </a>
                 </div>
             </section>
             <div class="middle-section">
-                <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                <img src="/assets/img/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
                 <p>Copyright ©2024 Portal Do Clima RS</p>
             </div>
             <div class="qrcode-section">
-                <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
+                <img src="/assets/img/qrCode.png" alt="QR Code" id="qrcode">
             </div>
         </div>
         <div class="diagonal-line left"></div>
