--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós</title>
-    <link rel="stylesheet" href="/src/css/sobre.css">
-    <link rel="stylesheet" href="/src/css/padronizacao.css">
+    <link rel="stylesheet" href="../../assets/css/sobre.css">
+    <link rel="stylesheet" href="../../assets/css/padronizacao.css">
 </head>
 <body>
     <header>
         <p id="faixa-do-header">O Rio Grande do Sul Precisa de Ajuda.</p>   
         <div class="header-top">
             <a href="index.html" class="logo">
-                <img src="/assets/logo.png" alt="logo">
+                <img src="/assets/img/logo.png" alt="logo">
             </a>
             <section id="barra-de-pesquisa">
-                <img src="/assets/lupa.png" alt="lupa De Pesquisa">
+                <img src="/assets/img/lupa.png" alt="lupa De Pesquisa">
                 <input type="text" placeholder="Pesquisar" alt="Barra De Pesquisa">
             </section>
         </div>
@@ -45,22 +45,22 @@
                 <h2 id="tituloContainer"></h2>
                 <div class="info-cards">
                     <div class="card">
-                        <img src="/assets/imagem-foguete.png" alt="Ícone de foguete">
+                        <img src="/assets/img/imagem-foguete.png" alt="Ícone de foguete">
                         <h2 id="tituloCard1"></h2>
                         <p id="textoCard1"></p>
                     </div>
                     <div class="card">
-                        <img src="/assets/imagem-pessoas.png" alt="Ícone de pessoas">
+                        <img src="/assets/img/imagem-pessoas.png" alt="Ícone de pessoas">
                         <h2 id="tituloCard2"></h2>
                         <p id="textoCard2"></p>
                     </div>
                     <div class="card">
-                        <img src="/assets/imagem-publicacao.png" alt="Ícone de publicação">
+                        <img src="/assets/img/imagem-publicacao.png" alt="Ícone de publicação">
                         <h2 id="tituloCard3"></h2>
                         <p id="textoCard3"></p>
                     </div>
                     <div class="card">
-                        <img src="/assets/imagem-predio.png" alt="Ícone de prédio">
+                        <img src="/assets/img/imagem-predio.png" alt="Ícone de prédio">
                         <h2 id="tituloCard4"></h2>
                         <p id="textoCard4"></p>
                     </div>
@@ -81,32 +81,32 @@
     </main>    
     <footer>
         <div class="footer">
-            <section id="footer-setor">
+            <section id="footerfeio">
                 <div class="elementsfooter">
-                    <a href="">
-                        <img src="/assets/redeSocial.png" alt="Redes Sociais">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/img/redeSocial.png" alt="Redes Sociais">
                         <h3>Redes Sociais</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
-                    <a href="sobre.html">
-                        <img src="/assets/sobreNos.png" alt="Sobre Nós">
+                    <a href="./sobre.html">
+                        <img src="/assets/img/sobreNos.png" alt="Sobre Nós">
                         <h3>Sobre Nós</h3>
                     </a>
                 </div>
                 <div class="elementsfooter">
-                    <a href="contato.html">
-                        <img src="/assets/contato.png" alt="Contato">
+                    <a href="https://www.youtube.com/watch?v=FAQl64vIRG8">
+                        <img src="/assets/img/contato.png" alt="Contato">
                         <h3>Contato</h3>
                     </a>
                 </div>
             </section>
             <div class="middle-section">
-                <img src="/assets/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
+                <img src="/assets/img/bandeiraRioGrande.png" alt="Bandeira do Rio Grande do Sul" id="bandeira">
                 <p>Copyright ©2024 Portal Do Clima RS</p>
             </div>
             <div class="qrcode-section">
-                <img src="/assets/qrCode.png" alt="QR Code" id="qrcode">
+                <img src="/assets/img/qrCode.png" alt="QR Code" id="qrcode">
             </div>
         </div>
         <div class="diagonal-line left"></div>
