feat: Update pequenas correções

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -53,19 +53,19 @@
                     }
                 </script>
             </div>
-            <img class="img-doacao" src="https://raw.githubusercontent.com/shirleipeixoto/PortalClimaRS/main/assets/doacaoimagem.png" alt="Jovem com cesta escrita doação">
+            <img class="img-doacao" src="../../assets/img/meinodoacao.png" alt="Jovem com cesta escrita doação">
         </section>
         <section class="container-geral">   
             <h2>Entidades que apoiam esta causa</h2>
             <div id="container-superior">
-                <img src="https://raw.githubusercontent.com/shirleipeixoto/PortalClimaRS/main/assets/image%204.png" alt="CNBB" height="80px">  
-                <img src="https://raw.githubusercontent.com/shirleipeixoto/PortalClimaRS/main/assets/growth.png" alt="Growth" height="160px" width="200px">
-                <img src="https://github.com/shirleipeixoto/PortalClimaRS/blob/main/assets/OngDoar.png?raw=true" alt="ONG Doar" width="150px">
-                <img src="https://raw.githubusercontent.com/shirleipeixoto/PortalClimaRS/main/assets/proz.png" alt="PROZ" width="140px">
+                <img src="../../assets/img/cnbb.png" alt="CNBB" height="80px">  
+                <img src="../../assets/img/growth.png" alt="Growth" height="160px" width="200px">
+                <img src="../../assets/img/OngDoar.png" alt="ONG Doar" width="150px">
+                <img src="../../assets/img/proz.png" alt="PROZ" width="140px">
             </div>
             <div id="container-inferior">
-                <img src="https://raw.githubusercontent.com/shirleipeixoto/PortalClimaRS/main/assets/riot%20games.png" alt="Riot Games" height="60px">
-                <img src="https://github.com/shirleipeixoto/PortalClimaRS/blob/main/assets/luzdivina.png?raw=true" alt="Luz Divina" height="90px">
+                <img src="../../assets/img/riot games.png" alt="Riot Games" height="60px">
+                <img src="../../assets/img/luzdivina.png" alt="Luz Divina" height="90px">
                 <img src="https://ongsoscidadaniaanimal.org/images/site/logo-sobre-a-ong.png" alt="ongsos" height="90px">
             </div>       
         </section>
