feat: Update Tentativa de tornar o formulario funcional

--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="stylesheet" href="../../assets/css/contato.css">
+    <script src="../js/contato.js"></script>
 </head>
 <body>
     <header>
@@ -36,7 +37,7 @@
             <p id="mensagem-forms">Entre em contato conosco preenchendo o formulário abaixo. Estamos aqui para responder suas dúvidas, receber sugestões ou oferecer suporte.</p>
         </div>
         <section id="elemento-bom">
-            <form action="enviar.php" method="post" id="formulario">
+            <form method="post" action="../enviar.php" id="formulario">
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required placeholder="Nome">
                 <br>
