feat: update tornando o formulario funcional

--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -37,7 +37,7 @@
             <p id="mensagem-forms">Entre em contato conosco preenchendo o formulário abaixo. Estamos aqui para responder suas dúvidas, receber sugestões ou oferecer suporte.</p>
         </div>
         <section id="elemento-bom">
-            <form method="post" action="../enviar.php" id="formulario">
+            <form method="post" action="http://localhost:8000/enviar.php" id="formulario">
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required placeholder="Nome">
                 <br>
